--- a/public/post/2017-11-16-looking-for-musicologists-on-twitter.Rmd
+++ b/public/post/2017-11-16-looking-for-musicologists-on-twitter.Rmd
@@ -1,27 +1,27 @@
 ---
 title: Looking For Musicologists on Twitter
 author: Dave
-date: '2017-11-16'
+date: '2017-11-20'
 slug: looking-for-musicologists-on-twitter
-categories: []
-tags: []
+categories: [R]
+tags: [Twitter, R, Data Mining]
 ---
 
 For the most part, Twitter is full of garbage.
 But I'm an optimist and a firm believer in [Sturgeon's Law](https://en.wikipedia.org/wiki/Sturgeon%27s_law) so by that logic there must be some good on it.
 That good is academic twitter.
 
-While this isn't a post evangelizing for academic Twitter, I did want to  
- 1. see if I could figure out if I could write a post with some R code in it and
- 2. share how I scraped Twitter to find active users in the Musicology and Music Theory community in case anyone else wants to try their hand at it.
+While this isn't a post advocating for academic Twitter, I did want to  
+ 1. see if I could figure out how to write a post with some R code in it and
+ 2. share how I scraped Twitter to find active users in the Musicology and Music Theory community
 
 So here it goes...
 
 The first thing that you have to do is get some tweets.
-Luckily there are some packages out there in the #rstats world that can help with this.
-For this project I used the [twitteR](https://cran.r-project.org/web/packages/twitteR/twitteR.pdf) package which lets you log into Twitter's API and search Twitter with R.
+Luckily some packages exist in the #rstats world that can help with this.
+For this project I used the [twitteR](https://cran.r-project.org/web/packages/twitteR/twitteR.pdf) package which lets you log into Twitter's API via R and and search it.
 There are already some instructions on how to get started with it that you can find [here](https://davetang.org/muse/2013/04/06/using-the-r_twitter-package/), so I won't go into tons of detail about setting it up.
-(Also just note you can't just copy and paste my code verbatim since it requires credentials from *your* own Twitter account)
+(Also please note you can't just copy and paste my code verbatim since it requires credentials from *your* own Twitter account)
 
 Let's first load the two packages we'll need.
 ```{r, eval=FALSE}
@@ -40,29 +40,30 @@ access_secret <- 'AND YOUR ACCESS SECRET HERE'
 setup_twitter_oauth(consumer_key, consumer_secret, access_token=NULL, access_secret=NULL)
 ```
 
-Running that last line in the chunk should then direct you to your default browser where it will then log into your Twitter account and ask you if it's OK for R to enter Twitter through the back door.
+Running that last line in the chunk should then direct you to your default browser.
+This will log you into your Twitter account and R will ask for Twitter's permission to enter through the back door.
 
 The next bit of code won't run the way I have it set up because Twitter doesn't let you download tweets older than a week old.
 So if you want to play with tweets from a conference's hashtag or some event, make sure to think ahead to download them!!
 
 ```{r, eval=FALSE}
-amsTwitter <- twitteR::searchTwitter("#smt2017", n = 700)
-amsTwitter <- twitteR::searchTwitter("#amsroc17", n = 1600)
+amsTwitter <- searchTwitter("#smt2017", n = 700)
+amsTwitter <- searchTwitter("#amsroc17", n = 1600)
 ```
 
 This line above searches Twitter for anything matching the conference hashtags and saves the output of it in a list.
 You can also include an argument asking for a certain number of tweets, which I've also done.
-Luckily the twitteR package has a function that will take this list and convert it to a nice data frame.
+Luckily the twitteR package has a function that will take this list and convert it to a data frame.
 
 ```{r, eval=FALSE}
 amsTwitter.df <- twListToDF(amsTwitter)
 smtTwitter.df <- twListToDF(smtTwitter)
 ```
 
-Now with two nice data frames, we'll soon be able to join them together and count up some tweets!
-In order to use this we can take advantage of the powerful 
+With these nice data frames, we'll soon be able to join them together and count up some tweets!
+In order to do this we can take advantage of the 
 [data.table](https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html) package to join our two tables together.
-Shout out to [Gorm Analytics](https://gormanalysis.com/) for introducing me to data.table and helping me learn it! 
+Of course there are other ways, but Ben over at [Gorm Analytics](https://gormanalysis.com/) sold me on data.table this past summer and since then I have really been loving its easy syntax.
 
 ```{r, eval=FALSE}
 amsTwitter.dt <- data.table(amsTwitter.df)
@@ -74,10 +75,10 @@ totalTweets <- merge(smttweets,amstweets, on ="screenName", all = TRUE)
 
 The first thing the above code does is swap our data frames over to data.tables.
 Once they are in the data.table format, we can count up the tweets by screen name, then list them from biggest to smallest all in the same line.
-From there we merge the two together via the shared column, making sure to grab every instance since not every Tweeter tweeted with both hashtags.
+From there we merge the two together via the shared column, making sure to grab every instance in each table since not every Tweeter tweeted with both hashtags.
 
-We then need to clean up some of the NAs in our bigger dataset with R's ifelse() function that basically works exactly like an if else statement would in Microsoft Excel.
-It looks over a column in your dataset, checks if a value is an NA, if it is then it gives it a 0, if not, it just puts in the value that was there in the first place.
+We then need to clean up some of the NAs (which as a data.table are characters!) in our bigger dataset with R's ifelse() function that basically works exactly like an ifelse statement would in Microsoft Excel.
+It looks over a column in your dataset, checks if a value is an NA, if it is then it gives it a 0, if not, it puts in the value that was there in the first place.
 After replacing NAs, I then make a new variable that adds together both columns then run our final line that prints out our final dataset from top to bottom.
 
 ```{r, eval=FALSE}
@@ -93,7 +94,7 @@ totalTweets[order(-TotalTweets)]
 
 ```
 
-From here it was just a matter of using some online converter to turn it into an html file and then ssh'ing it up to our [Music Cognition at LSU](musiccog.lsu.edu/) server!
+From here it was simply a matter of using an [online converter](http://www.convertcsv.com/csv-to-html.htm) to turn it our final table an html file and then ssh it up to our [Music Cognition at LSU](http://musiccog.lsu.edu/) server! 
+Since then I've also added both the 2017 [AMS](https://musiccog.lsu.edu/davidjohnbaker/data/amsmt17twitterdata/AmtTwitterData.csv) and [SMT](https://musiccog.lsu.edu/davidjohnbaker/data/amsmt17twitterdata/SmtTwitterData.csv) datasets that I used to generate the counts in case you want to try this for yourself. 
 
-If anyone has any questions on this, please let me know! 
-
+If anyone has any questions on this, please [tweet me](https://twitter.com/DavidJohnBaker)! 
