--- a/content/post/2018-01-14-hire-me-as-a-data-scientist-part-i.Rmd
+++ b/content/post/2018-01-14-hire-me-as-a-data-scientist-part-i.Rmd
@@ -13,10 +13,10 @@ categories: [R, Data Science, Beer]
 
 I read [Medium](https://medium.com/) blogs posts on "How to Become a Data Scientist" more often than I care to admit.
 Much of this comes from a fear that after doing all this work in the PhD and then hitting the Music Theory job market that I won't fit the mold of the kind of theorist most schools want to hire. 
-Not coming from [one of five schools that seem to have a monopoly on the tenure track jobs](https://pushpullfork.com/music-theory-job-market/) can be a bit discouraging, but I also won't deny that having regular 9-5 with a [decent salary](https://www.glassdoor.com/Salaries/data-scientist-salary-SRCH_KO0,14.htm) is pretty tempting after spending the vast majority of my twenties in school.
-And even if I don't go on over to the darkside after the PhD, I'll probably always be looking for a bit more work in summers.
+Not coming from [one of five schools that seem to have a monopoly on the tenure track jobs](https://pushpullfork.com/music-theory-job-market/) can be a bit discouraging, but I also won't deny that having a non-academic job with a regular 9-5 schedule and a [decent salary](https://www.glassdoor.com/Salaries/data-scientist-salary-SRCH_KO0,14.htm) is pretty tempting after spending the vast majority of my twenties in school.
+And even if I don't go on over to industry after the PhD, I'll probably always be looking for a bit more work in summer.
 
-On top of all of that, I believe that skills that acquired in a PhD (especially if you do computational musicology and music cognition!) are very transferable to most jobs and it's just a matter of being a bit more pro-active in promoting yourself that might help me one day land a stable, non-academic job.
+On top of all of that, I believe that skills that acquired in a PhD (especially if you do computational musicology and music cognition!) are very transferable to most jobs and it's just a matter of being a bit more pro-active in promoting myself that might help me one day land a stable, non-academic job.
 
 That said, one tweet that I saw last week by [Jesse Meagan](https://twitter.com/kierisi) linked to this really interesting Linked-In 
 post by [Tanya Cashorali](https://twitter.com/tanyacash21) that proported to have a [one size fits all data-science interview process](https://www.linkedin.com/pulse/how-hire-test-data-skills-one-size-fits-all-interview-tanya-cashorali/) which has candidates take home a big dataset with a bunch of beer reviews and answer four very broad questions.
