--- a/content/post/2018-01-14-hire-me-as-a-data-scientist-part-i.Rmd
+++ b/content/post/2018-01-14-hire-me-as-a-data-scientist-part-i.Rmd
@@ -20,7 +20,7 @@ On top of all of that, I believe that skills that acquired in a PhD (especially 
 
 That said, one tweet that I saw last week by [Jesse Meagan](https://twitter.com/kierisi) linked to this really interesting Linked-In 
 post by [Tanya Cashorali](https://twitter.com/tanyacash21) that proported to have a [one size fits all data-science interview process](https://www.linkedin.com/pulse/how-hire-test-data-skills-one-size-fits-all-interview-tanya-cashorali/) which has candidates take home a big dataset with a bunch of beer reviews and answer four very broad questions.
-Considering myself an afficiando of How-To-Become-a-Data Scientist articles, this of course caught my eye.
+Considering myself an aficionado of How-To-Become-a-Data Scientist articles, this of course caught my eye.
 
 After reading the article I figured why not give it a go?
 It's the start of the semester, I'm basically ABD, need more of a portfolio beyond [my github](www.github.com/davidjohnbaker1), and I have nothing to do with my Saturday morning. 
@@ -32,7 +32,7 @@ I'd love some feedback!
 
 ## Exploring the Dataset
  
-The first thing I did was to grab this dataset which you can get [here](https://s3.amazonaws.com/demo-datasets/beer_reviews.tar.gz?lipi=urn%3Ali%3Apage%3Ad_flagship3_pulse_read%3BDqDjqRycTlq5seB4xN3ocA%3D%3D) and then I set up my R script with a few of my favorite packages.
+The first thing I did was to grab this dataset which you can get [here](https://s3.amazonaws.com/demo-datasets/beer_reviews.tar.gz?lipi=urn%3Ali%3Apage%3Ad_flagship3_pulse_read%3BDqDjqRycTlq5seB4xN3ocA%3D%3D) and then I set up my R script with a few of my favorite packages (again, big love to Ben at [GormAnalysis](https://gormanalysis.com/) for helping me learn [data.table](https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html).
 
 ```{r}
 #=====================================================================================#
@@ -61,10 +61,10 @@ beer[, .(.N = unique(beer$beer_style))]
 ```
 
 
-From a bird's eye view we have 56,857 unique beers in 104 different categories from 5,743 different breweries and 33,388 unique beer afficianados who have gone out of their way to tell this website what they think about the beers they drink.
+From a bird's eye view we have 56,857 unique beers in 104 different categories from 5,743 different breweries and 33,388 unique beer aficionados who have gone out of their way to tell this website what they think about the beers they drink.
 
-Before diving in further, it's worth doing a prelimnary check of the quality of the data (aka we should know if this is BAD (Best Availible Data) or has undergone a fair deal of cleaning).
-As someone who comes from a more psychology background, I've noticed what certain people consider "clean" when it comes to data is quite variable.
+Before diving in further, it's worth doing a preliminary check of the quality of the data (aka we should know if this is BAD (Best Available Data) or has undergone a fair deal of cleaning).
+As someone who comes from a more psychology background, I've noticed what certain people consider "clean" when it comes to data varies a lot.
 
 The first thing I check for is if there is any kind of data missing and if there is, is it due to chance? 
 Or is it due to some sort of systematic variation?
@@ -136,7 +136,7 @@ After visually inspecting the graph on the size of breweries (below), I figured 
 
 ```{r}
 # How many beers to count for a big brewery? 
-hist(NoOfBeers$N, breaks= 20, 
+hist(NoOfBeers$N, breaks= 200, 
      main = "Distribution of Size of Breweries", 
      xlab = "Number of Beers Produced by a Brewery")
 
@@ -175,4 +175,62 @@ ggplot(brassOrg.abv, aes(x = beer_name, y = beer_abv)) +
    theme(axis.text.x=element_text(angle = -90, hjust = 0)) + ylim(0, 60) 
 ```
 
-As I try to keep my posts on this site short and sweet, let's move to Part II for answering Question 2!
+I think that saying Schorschbräu is technically correct here, but after sharing my findings with my one beer drinking friend
+he pointed out that one thing that this analysis did not take into account was the how that beers
+that are traditionally brewed to have a higher ABV (like IPAs and Belgiums) might skew my results.
+So if you are a big IPA brewery, you are going to have higher average ABV because of the beers you decide to brew!
+
+So in the true spirit of that data science venn diagram noting that data scientists need to be flexible in 
+incorporating others' domain knowledge, I did another analysis to just show how much an answer can change depending on how you change your operationalization of the question! 
+
+Let's do another one!
+
+First up for this one is making a plot of the data to see how much beers actually vary from type to type. 
+(Excuse the messy plot for now, I thought it would render fine, I'll fix it.)
+
+```{r}
+# Get mean and SD of each beer type 
+abv.by.type <- beer.complete[ , .(MeanAbvType = mean(beer_abv), 
+                                  SdAbvType = sd(beer_abv)), 
+                              by = beer_style]
+
+# For Graphing, order, set style as factor 
+ordered.abv.by.type <- abv.by.type[order(-MeanAbvType)]
+ordered.abv.by.type$beer_style <- factor(ordered.abv.by.type$beer_style, levels = ordered.abv.by.type$beer_style)
+
+# Average ABV by beer type
+ggplot(ordered.abv.by.type, aes(x = beer_style, y = MeanAbvType)) + 
+  geom_bar(stat="identity") +   coord_flip() +
+  labs(title = "Average ABV by Type of Beer",
+       x = "Beer Style",
+       y = "Mean ABV, bars represent SD") +
+  geom_errorbar(aes(ymin=MeanAbvType-SdAbvType, ymax=MeanAbvType+SdAbvType)) +
+  theme_bw() 
+```
+
+So you can see here that if you wanted to have a higher ABV on average for your brewery, you'd benefit from having more IPAs,
+Barley Wines, and Belgian Stouts.
+
+Now with average ABV for each beer, let's then match that to our big list, find how each beer fairs against its own category,
+sort them, and then combine them with our information from before on how big the brewery is. 
+For the purposes of this example, let's only look at breweries that have over 100 beers in the database and look the top 20.
+
+```{r}
+# Combine ABV per type data with complete data
+beer.complete.avg.abv <- abv.by.type[beer.complete, on = "beer_style"]
+# Make new z score variable based on other beers in group
+beer.complete.avg.abv[, zABV := (beer_abv-MeanAbvType)/SdAbvType]  
+# Get averages per brewery on z variable
+zAvgBeers <- beer.complete.avg.abv[, .(AvgAbvZ = mean(zABV)), by = brewery_name][order(-AvgAbvZ)]
+# Combine back with our data on proxy of size of brewery
+BreweryAndAvgAbv <- zAvgBeers[NoOfBeers, on = "brewery_name"]
+# And the winner is...
+BreweryAndAvgAbv[N > 100][order(-AvgAbvZ)][1:25]
+```
+
+Looking at this list, we get a totally different answer.
+It appears that on average [Kuhnhenn Brewing Company](https://www.beeradvocate.com/beer/profile/2097/) brews their beers 1.26 standard deviations above the mean of all other beers in that category!
+
+Both answers could be technically correct, but more imporantly demonstrate how important it is to come up with how you frame your question first, and then try to answer it so you don't end up going on a fishing expedition! 
+
+Moving on to question #2! 
